Swagger documentation implemented
